--- a/newebapp/src/Actuators.css
+++ b/newebapp/src/Actuators.css
@@ -1,41 +1,80 @@
-.Actuators-container {
+.actuators-container {
     display: flex;
-    /* Or use display: grid; */
-    flex-direction: column;
-    /* Stack divs vertically (Flexbox) */
-    grid-template-columns: auto;
-    /* Allow divs to adjust width (Grid) */
-    /* Optional: Add spacing between divs */
-    grid-gap: 20px;
+    justify-content: center;
 }
 
-.actuators {
+.actuators-row {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    grid-column-gap: 20px;
+    transition: transform 0.5s ease-in-out;
+}
+
+.actuator, .add-actuator {
     margin-top: 5%;
-    margin-left: 15px;
     border-radius: 25px;
     padding: 20px;
     width: 300px;
     height: 210px;
-    /* Existing styles from your original CSS */
-    margin-bottom: calc(20px - 5%);
-    /* Add vertical spacing between divs (optional) */
-    /* If needed, set a fixed height or use flex-wrap: wrap for Flexbox */
-    /* height: 200px;  */
-    /* flex-wrap: wrap; */
     text-align: center;
-    -webkit-box-shadow: 4px 30px 30px -10px #000000;
-    -moz-box-shadow: 4px 5px 30px -10px #000000;
-    -o-box-shadow: 4px 5px 30px -10px #000000;
     box-shadow: 0px 0px 30px -10px #000000;
     font-size: 20px;
     font-weight: bold;
     font-family: Arial, Helvetica, sans-serif;
     background-color: white;
     opacity: 80%;
+    transition: transform 0.5s ease-in-out;
 }
 
+.add-actuator{
+    cursor: pointer;
+}
 
-.actuators img {
+.actuator img {
     padding: 10px;
     margin-left: calc(80px - 10px);
+}
+
+.add-actuator img {
+    padding: 10px;
+    margin-left: calc(80px - 10px);
+}
+
+.actuator:hover {
+    transform: scale(1.05);
+}
+
+.actuator:not(:last-child) {
+    margin-bottom: 0; /* Remove bottom margin for all but the last actuator */
+}
+
+.actuator.expanded {
+    transform: translateX(50px); /* Example translation for expansion */
+}
+
+.add-actuator:hover {
+    transform: scale(1.05);
+}
+
+.add-actuator:not(:last-child) {
+    margin-bottom: 0; /* Remove bottom margin for all but the last sensor */
+}
+
+.add-actuator.expanded {
+    transform: translateX(50px); /* Example translation for expansion */
+}
+
+.delete-actuator {
+    cursor: pointer;
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    z-index: 2;
+    opacity: 0;
+    transition: opacity 0.3s ease-in-out;
+}
+
+.actuator:hover .delete-actuator {
+    opacity: 1;
 }
